@@ -7,6 +7,7 @@ The purpose of this changelog is to document new features and breaking changes t
 - Add JSON <-> Scheme interface
 - Separate crypto primitives into separate namespace
 - Add unix time primitive
+- Use explicit period instead of periodicity
 
 --- v1.0.4 (2025.09.14) ---
 
